# filefetch

./: .cargoignore  Cargo.toml  README.md
src/: main.rs
